# odoo-mcp-claude

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  DEVLOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  env.example  odoo_servers.json.example  pyproject.toml  start-mcp.sh  stop-mcp.sh
src/odoo_mcp/: __init__.py  odoo_client.py  server.py
